Correct display of countries list on mobile

--- a/app/assets/stylesheets/layouts/_application.scss
+++ b/app/assets/stylesheets/layouts/_application.scss
@@ -47,6 +47,14 @@
   padding: 20px 0;
 }
 
+@media only screen and (max-width: 480px) {
+  body {
+    .layout-header-bottom .header-title {
+      margin: 1.5em 20px 0.5em 20px !important;
+      max-width: none !important;
+    }
+  }
+}
 
 // CONTENT
 .layout-content {
