--- a/app/assets/stylesheets/layouts/_countries.scss
+++ b/app/assets/stylesheets/layouts/_countries.scss
@@ -35,7 +35,62 @@
 
 }
 
+@media only screen and (max-width: 480px) {
+  .countries_list_index {
+    .country {
+      &:first-of-type a {
+        border-top: 0;
+      }
 
+      a {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        height: 80px;
+
+        &:hover {
+          svg {
+            top: 0;
+          }
+          .country-content {
+            top: 0;
+            left: 20px;
+            right: 0;
+          }
+        }
+
+        .country-content, svg {
+          top: 0;
+          margin-left: 20px;
+          right: 0;
+          display: table;
+          max-width: 60%;
+          height: 100%;
+          path {
+            transform: scale(0.4);
+            -webkit-transform: scale(0.4);
+          }
+          h3 {
+            font-size: 20px;
+            text-align: left;
+            position: relative;
+            left: -18px;
+            color: #333;
+            display: table-cell;
+            vertical-align: middle;
+            height: 100%;
+          }
+        }
+
+        svg {
+          margin-top: 10px;
+          left: 68%;
+          width: 84px;
+        }
+      }
+    }
+  }
+}
 
 .countries_list {
   @extend .clearfix;
@@ -113,5 +168,12 @@
     &:-ms-input-placeholder {
        color: #666;
     }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .search-countries-box {
+    margin-right: 20px;
+    margin-left: 20px;
   }
 }
